// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements OperationElement given bindings field of type OperationBindingsElement should refract to semantic ApiDOM tree 1`] = `
(OperationElement
  (MemberElement
    (StringElement)
    (OperationBindingsElement)))
`;

exports[`refractor elements OperationElement given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements OperationElement given message field of \`oneOf\` shape should refract to semantic ApiDOM tree 1`] = `
(OperationElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ArrayElement
          (MessageElement)
          (ReferenceElement
            (MemberElement
              (StringElement)
              (StringElement))))))))
`;

exports[`refractor elements OperationElement given message field of type MessageElement should refract to semantic ApiDOM tree 1`] = `
(OperationElement
  (MemberElement
    (StringElement)
    (MessageElement)))
`;

exports[`refractor elements OperationElement given message field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements OperationElement given traits field contains list of type OperationTraitElement should refract to semantic ApiDOM tree 1`] = `
(OperationElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (OperationTraitElement))))
`;

exports[`refractor elements OperationElement given traits field contains list of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements OperationElement should refract to semantic ApiDOM tree 1`] = `
(OperationElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SecurityRequirementElement
        (MemberElement
          (StringElement)
          (ArrayElement)))))
  (MemberElement
    (StringElement)
    (TagsElement))
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement)))
`;
